Adding team members names.

--- a/word_count_lab.ipynb
+++ b/word_count_lab.ipynb
@@ -2,6 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "Lab 1\n",
+        "\n",
+        "Team:              \n",
+        "Intushan SUTHAKARAN intushan.suthakaran@edu.ece.fr      \n",
+        "Benjamin AUER benjamin.auer@edu.ece.fr      \n",
+        "Aurelien VERDIER aurelien.verdier@edu.ece.fr     \n",
+        "Augustin SAMIER augustin.samier@edu.ece.fr"
+      ],
+      "metadata": {
+        "id": "hOgQ7HPl5mcz"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0WPylkxI7S73"
       },
